# magic-mirror

./: .gitignore  pyproject.toml
magic_mirror/: home_assistant.py  magic_tkinter.py  pir.py  secrets.json  sensor_read.py  temperature_home.py
magic_mirror/google_calendar/: calendar_google.py  credentials.json
magic_mirror/microsoft_to_do_list/: api_token_access.json  ms_graph_token.py  to_do_list.py
magic_mirror/models/: cal.json  calendar_model.py  temperature_model.py  to_do_list_model.py  weather_model.py
magic_mirror/open_weather_map/: open_weather_map.py  weather_one_call.json
magic_mirror/static/: activities.json  calendar_ev.json  calendar_events.json  quotes.py  ricorda_di_task.json  routine_task.json  weather_one_call.json
