[tool.poetry]
name = "magic-mirror"
version = "0.1.0"
description = ""
authors = ["isabellemorello <isabelle.michelle.morello@gmail.com>"]
readme = "README.md"
packages = [{include = "magic_mirror"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
