[tool.poetry]
name = "magic-mirror"
version = "0.1.0"
description = ""
authors = ["isabellemorello <isabelle.michelle.morello@gmail.com>"]
readme = "README.md"
packages = [{include = "magic_mirror"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
google = "^3.0.0"
google-api-python-client = "^2.72.0"
google-auth = "^2.16.0"
google-api-core = "^2.11.0"
cookiecutter = "^2.1.1"
googleapis-common-protos = "^1.58.0"
msal = "^1.20.0"
requests-oauthlib = "^1.3.1"
google-auth-oauthlib = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
